Dec 2013 version for grad school application (FIN)

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -1,32 +1,34 @@
-%
-% Curriculum Vitae of Aleksander Morgado <aleksander@gnu.org>
-%
-% Based on Alessandro Plasmati's CV template:
+% The evolving curriculum vitae of Xin Wang <albertfxwang@gmail.com>
+% based upon the cv of Aleksander Morgado <aleksander@gnu.org>
+% itself based on Alessandro Plasmati's cv template:
 % http://www.scribd.com/doc/16335667/Writing-your-Professional-CV-with-LaTeX
 %
-% Compile with:
-%   $> xelatex cv_aleksander_morgado.tex
-%
-%%% highlights:     \hyperlink{name}{text}  ºÍ  \hypertarget{name}{text} ÅäÌ×Ê¹ÓÃ£¡
+% Compiled with:
+%   $> xelatex xwang_cv.tex
 
+%--------------------------------------------------------------------------------------------------------------------------------
 %\documentclass[a4paper,10pt]{article}
-
 \documentclass[10pt]{article}
+
 \usepackage{geometry}
 \geometry{letterpaper,tmargin=1cm,bmargin=-1.5cm,lmargin=0.5cm,rmargin=1cm,headheight=0in,headsep=0in,footskip=0in}
+% US letter layout
+%\setlength{\paperwidth}{8.5in}
+%\setlength{\paperheight}{11in}
+% A4 paper layout
 \setlength{\paperwidth}{21cm}
-\setlength{\paperheight}{29.7cm}	% A4paper scope
+\setlength{\paperheight}{29.7cm}
+
 %\setlength{\textheight}{10.5in}
 %\setlength{\textheight}{13.5in}
 
-%A Few Useful Packages
 \usepackage[latin1]{inputenc}
 \usepackage{marvosym}
 \usepackage{fontspec} 					    %for loading fonts
 \usepackage{xunicode,xltxtra,url,parskip} 	%other packages for formatting
 \RequirePackage{color,graphicx}
 \usepackage[usenames,dvipsnames]{xcolor}
-%\usepackage{fullpage}				% to fix t/b/l/r margins
+%\usepackage{fullpage}				        % to fix t/b/l/r margins
 \usepackage{textcomp}
 \usepackage{titlesec}					    %custom \section
 \usepackage{footmisc}
@@ -87,12 +89,10 @@
 \textsc{Current}
 & Field of Interest: Precision Cosmological Constraints, Large-Scale Structure, Gravitational Lensing, Galaxy Clusters, Cosmic Neutrinos, Cosmological Simulation, CMB Physics, Primordial Power Spectrum, Gamma-Ray Bursts. \\
 &   \texttt{Advisors: Profs. Gong-Bo Zhao, Charling Tao, Xuelei Chen, Hu Zhan, Tong-Jie Zhang, Y. F. Huang}   \\
-%Shigehiro Nagataki
 \multicolumn{2}{c}{} \\
 
 \textsc{Sep. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy (Jun. 2010)}    \\
 \textsc{Jun. 2010}       &   Weighted Average Score: 84.64/100 (overall), 87.68/100 (major); Ranking: 2$^{\rm nd}$/26  \\
-%&   \texttt{Advisors and Collaborators: Profs. Y. F. Huang, L.-M. Song}  \\
 \end{tabular}
 
 
@@ -228,6 +228,7 @@ reconstruct the evolution history of some crucial cosmological quantities, i.e.,
 
 %\href{http://www.aleksander.es/data/cv\_aleksander\_morgado.pdf}{http://www.aleksander.es/data/cv\_aleksander\_morgado.pdf}
 
-
-%----------------------------------------------------------------------------------------------------------------------------------------------------
 \end{document}
+%--------------------------------------------------------------------------------------------------------------------------------
+%                                                               END
+%--------------------------------------------------------------------------------------------------------------------------------
