July 2013 version for visa application

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -2,12 +2,7 @@
 % based upon the cv of Aleksander Morgado <aleksander@gnu.org>
 % itself based on Alessandro Plasmati's cv template:
 % http://www.scribd.com/doc/16335667/Writing-your-Professional-CV-with-LaTeX
-%
-% Compiled with:
-%   $> xelatex xwang_cv.tex
-
 %--------------------------------------------------------------------------------------------------------------------------------
-%\documentclass[a4paper,10pt]{article}
 \documentclass[10pt]{article}
 
 \usepackage{geometry}
@@ -72,22 +67,22 @@
                               & of Sciences, 20A Datun Road, Chaoyang District, Beijing, 100012, China \\
     \textsc{E-mail, Cell and Skype Account:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +86-18911630691  |  albertfxwang \\
     \textsc{Current Status:}
-& Master Candidate at School of Astronomy and Space Sciences, Nanjing University  \\
+%& Master Candidate at School of Astronomy and Space Sciences, Nanjing University  \\
 & Research Assistant at National Astronomical Observatories, Chinese Academy of Sciences  \\
 \end{tabular}
 
-\vspace{-0.5cm}
+%\vspace{-0.5cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Objective}
-\textbf{Admission to Ph.D. Program in Astrophysics (Fall 2013) at University of California, Santa Barbara}
+%\section{Objective}
+%\textbf{Admission to Ph.D. Program in Astrophysics (Fall 2013) at University of California, Santa Barbara}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education}
 
 \begin{tabular}{r|p{17.5cm}}
-\textsc{Sep. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University  |  \textbf{Towards M.Sc. in Astrophysics (Jun. 2013)}   \\
-\textsc{Current}
-& Field of Interest: Precision Cosmological Constraints, Large-Scale Structure, Gravitational Lensing, Galaxy Clusters, Cosmic Neutrinos, Cosmological Simulation, CMB Physics, Primordial Power Spectrum, Gamma-Ray Bursts. \\
+\textsc{Sep. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics (Jun. 2013)}   \\
+\textsc{May 2013}
+& Field of Interest: Precision Cosmological Constraints, Large-Scale Structure, Gravitational Lensing, Galaxy Clusters, Cosmic Neutrinos, Cosmological  Simulation, CMB Physics, Primordial Power Spectrum, Gamma-Ray Bursts. \\
 &   \texttt{Advisors: Profs. Gong-Bo Zhao, Charling Tao, Xuelei Chen, Hu Zhan, Tong-Jie Zhang, Y. F. Huang}   \\
 \multicolumn{2}{c}{} \\
 
@@ -115,8 +110,8 @@ reconstruct the evolution history of some crucial cosmological quantities, i.e.,
 
 \textsc{Sep. 2011}--     &   \emph{Title: Using the Cosmic Distance-Duality Relation to Test the $f_{\rm gas}$ Measurements in Galaxy Clusters} \\
 \textsc{Jan. 2012}  &   \small{We propose a new method to assess X-ray measurements of galaxy cluster gas fraction ($f_{\rm gas}$), via a combination of the Union2 SNIa compilation and the cosmic distance-duality relation, $\eta_{\rm{theory}}=D_{\rm L}(1+z)^{-2}/D_{\rm A}=1$. Since in all previous estimations, $\eta_{\rm{theory}}=1$ is readily assumed, we use this constraint to recover the cosmological information from a given set of $f_{\rm gas}$ data. Our results show that the $f_{\rm gas}$ sample of Ettori et al. 2009 is endowed with an $\Omega_{\Lambda}=0$ reference cosmology, rather than the reported model ($\Omega_\textrm{m}=0.3,\Omega_{\Lambda}=0.7$), which is excluded even at 3-$\sigma$ confidence level.}\\
-&   \textbf{Paper to be submitted}\\
-%&   \textbf{Scientific Product: \hyperlink{6}{Wang et al. (2012) (Item 6 of Publications)}}  \\
+%&   \textbf{Paper to be submitted}\\
+&   \textbf{Scientific Product: \hyperlink{6}{Wang et al. (2013) (Item 6 of Publications)}}  \\
 \multicolumn{2}{c}{} \\
 
 \textsc{Jan. 2011}--     &   \emph{Title: Using the Test of the Distance-Duality Relation to Probe the Morphology of Galaxy Clusters} \\
@@ -148,7 +143,7 @@ reconstruct the evolution history of some crucial cosmological quantities, i.e.,
     \item[3]\hypertarget{3}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
     \item[4]\hypertarget{4}{} Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98, (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833})
     \item[5]\hypertarget{5}{} \textbf{Wang, X.}, Meng, X.-L., Zhang, T.-J., Shan, H.Y., Gong, Y., Tao, C., Chen, X., \& Huang, Y. F. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136})
-%    \item[6]\hypertarget{6}{} \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae, 2011, MNRAS submitted
+    \item[6]\hypertarget{6}{} \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae, 2013, RAA, in press (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077})
 \end{list}  \\
 %\multicolumn{1}{c}{\textsc{Conference Contributions, Unrefereed}}    \\
 %\vspace{-0.4cm}
@@ -157,7 +152,7 @@ reconstruct the evolution history of some crucial cosmological quantities, i.e.,
 %\end{list}   \\
 \end{longtable}
 
-\vspace{-3.5em}
+\vspace{-2.5em}
 
 \begin{longtable}{r|p{16.5cm}}
 \multicolumn{2}{c}{\textsc{Academic Activities}}  \\
@@ -213,7 +208,7 @@ reconstruct the evolution history of some crucial cosmological quantities, i.e.,
 \section{Working Experience}
 \begin{tabular}{rp{16cm}}
 \textsc{Dec. 2010}--  & Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, Nanjing University \\
-\textsc{Dec. 2011}    & \small{In total, we arranged 17 meetings and invited 34 speakers. The majority of the speakers are graduate students who come from our school, while we do have some from many other institutes, e.g., Purple Mountain Observatory, University of Science and Technology of China, University of Sydney, etc. Topics are related to speakers' major field of interest. Some academic approaches and experience in doing scientific research are also shared with participants. This activity is financially supported by our school. The organization of this activity has been passed on to other members of my team, since I am no longer in Nanjing.}  \\
+\textsc{Dec. 2011}    & \small{In total, we have arranged 17 meetings, and invited 34 speakers, most of which are graduate students. The majority of the speakers come from our school, while we do have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science and Technology of China, University of Sydney. The topics are related to the major field of interest of the speakers, who will also share with participants some academic experience in doing scientific research. This activity is financially supported by our school.}  \\
 \multicolumn{2}{c}{} \\
 \textsc{\small Sept.--Dec. 2010}  & Teaching Assistant of Theoretical Astrophysics (senior undergraduate course taught by Prof. Z. G. Dai) \\
 \multicolumn{2}{c}{} \\
@@ -223,10 +218,6 @@ reconstruct the evolution history of some crucial cosmological quantities, i.e.,
 
 \end{tabular}
 
-%\let\thefootnote\relax
-%\footnote{Last updated on \today.}
-
-%\href{http://www.aleksander.es/data/cv\_aleksander\_morgado.pdf}{http://www.aleksander.es/data/cv\_aleksander\_morgado.pdf}
 
 \end{document}
 %--------------------------------------------------------------------------------------------------------------------------------
