Jan 2015 (FIN) for visa renewal no check

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -85,7 +85,7 @@
   %--------------------------------------------------------
   \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics (Jun. 2013)}   \\
   \textsc{May 2013}
-  & Field of Interest: Precision Cosmological Constraints, Galaxy Clusters, Primordial Power Spectrum, Gamma-Ray Bursts. \\
+  & Field of Interest: Precision Cosmological Constraints, Galaxy Clusters, Primordial Power Spectrum. \\
   & \texttt{Advisors: Profs. Gong-Bo Zhao, Charling Tao, Tong-Jie Zhang, Y. F. Huang, Hu Zhan}   \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
@@ -110,12 +110,12 @@
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Sept. 2012}--  &   \emph{Title: Applications of the Non-Parametric Bayesian Method to Cosmological Reconstructions}	\\
-  \textsc{Present}       &   \small{We attempt to use the newly proposed non-parametric Bayesian method to reconstruct the
+  \textsc{Aug. 2013}     &   \small{We attempt to use the newly proposed non-parametric Bayesian method to reconstruct the
   evolution history of some crucial cosmological quantities, i.e., primordial perturbation power spectrum, dark energy equation of
   state, growth function. We believe that some unique abrupt features of the primordial power spectrum can be revealed by our
   method. With the help of Fisher formalism and principle component analysis, it is straightforward to forecast the possibility
   that those features can be detected by next generation projects, i.e., AS3, BigBOSS, Euclid, CMBPol.}	\\
-  &   \textbf{Project in progress} \\
+  &   \textbf{Scientific Product: paper to be submitted} \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Feb. 2012}--  &   \emph{Title: Constraints on Cosmic Neutrinos and Dark Energy Revisited}  \\
