Apr 15 for UCLA online application

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -79,7 +79,7 @@
   %--------------------------------------------------------
   \textsc{Sept. 2013}--      &   Physics Department, UCSB    |   \textbf{Towards Ph.D. in physics (Jun. 2018)}   \\
   \textsc{Present}
-  & Field of Interest: Strong Gravitational Lensing.     \\
+  & Field of Interest: Strong Gravitational Lensing, Galaxy Clusters, Cosmology.     \\
   &   \texttt{Advisor: Prof. Tommaso Treu}     \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
@@ -106,7 +106,8 @@
   clusters, including 8 targeted by CLASH and 6 Frontier Fields. We will address three scientific questions: 1) What's the role that
   galaxies play in the process of reionization? 2) Why and how is galaxy evolution environmental dependent? 3) How do metals cycle
   in and out of galaxies and what's the interplay between cycling of metals and SF activities?}   \\
-  &   \textbf{Project in progress} \\
+  &   \textbf{Project in progress and scientific products: \hyperlink{14.schmidt.apjl}{Schmidt et al. (2014)},
+  \hyperlink{15.jones.aj}{Jones et al. (2015)}, \hyperlink{15.wang.apj}{Wang et al. (2015)} } \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Sept. 2012}--  &   \emph{Title: Applications of the Non-Parametric Bayesian Method to Cosmological Reconstructions}	\\
@@ -118,8 +119,8 @@
   &   \textbf{Scientific Product: paper to be submitted} \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
-  \textsc{Feb. 2012}--  &   \emph{Title: Constraints on Cosmic Neutrinos and Dark Energy Revisited}  \\
-  \textsc{Oct. 2012}    &   \small{Using various cosmological observations, i.e., CMB, weak lensing (WL), BAO, observational Hubble
+  \textsc{Feb. 2012}--   &   \emph{Title: Constraints on Cosmic Neutrinos and Dark Energy Revisited}  \\
+  \textsc{Oct. 2012}     &   \small{Using various cosmological observations, i.e., CMB, weak lensing (WL), BAO, observational Hubble
   parameter data (OHD), type Ia supernovae (SNIa), we impose constraints on the sum of neutrino masses ($\Sigma m_{\nu}$), the
   effective number of neutrino species ($N_{\rm eff}$) and dark energy equation of state ($w$). We find that a tight upper limit
   on $\Sigma m_{\nu}$ can be extracted if $N_{\rm eff}$ and $w$ are fixed, however it will be severely weakened if $N_{\rm eff}$ and
@@ -127,22 +128,32 @@
   reported in the literature. The best-fits from our most generalized constraint read $\Sigma m_{\nu}=0.556^{+0.231}_{-0.288}\rm
   eV$, $N_{\rm eff}=3.839\pm0.452$, and $w=-1.058\pm0.088$. The different constraining abilities of current WL, OHD and SNIa samples 
   are assessed and compared.}\\
-                        &   \textbf{Scientific Product: \hyperlink{12.wang.jcap}{Wang et al. (2012) (Item 4 of Publications)}}  \\
+  &   \textbf{Scientific Product: \hyperlink{12.wang.jcap}{Wang et al. (2012)}}  \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Sept. 2011}--  &   \emph{Title: Using the Cosmic Distance-Duality Relation to Test the $f_{\rm gas}$ Measurements in Galaxy Clusters} \\
-  \textsc{Jan. 2012}    &   \small{We propose a new method to assess X-ray measurements of galaxy cluster gas fraction ($f_{\rm gas}$), via a combination of the Union2 SNIa compilation and the cosmic distance-duality relation, $\eta_{\rm{theory}}=D_{\rm L}(1+z)^{-2}/D_{\rm A}=1$. Since in all previous estimations, $\eta_{\rm{theory}}=1$ is readily assumed, we use this constraint to recover the cosmological information from a given set of $f_{\rm gas}$ data. Our results show that the $f_{\rm gas}$ sample of Ettori et al. 2009 is endowed with an $\Omega_{\Lambda}=0$ reference cosmology, rather than the reported model ($\Omega_\textrm{m}=0.3,\Omega_{\Lambda}=0.7$), which is excluded even at 3-$\sigma$ confidence level.}\\
-                        &   \textbf{Scientific Product: \hyperlink{13.wang.raa}{Wang et al. (2013) (Item 5 of Publications)}}  \\
+  \textsc{Jan. 2012}     &   \small{We propose a new method to assess X-ray measurements of galaxy cluster gas fraction ($f_{\rm
+  gas}$), via a combination of the Union2 SNIa compilation and the cosmic distance-duality relation, $\eta_{\rm{theory}}=D_{\rm
+  L}(1+z)^{-2}/D_{\rm A}=1$. Since in all previous estimations, $\eta_{\rm{theory}}=1$ is readily assumed, we use this constraint to
+  recover the cosmological information from a given set of $f_{\rm gas}$ data. Our results show that the $f_{\rm gas}$ sample of
+  Ettori et al. 2009 is endowed with an $\Omega_{\Lambda}=0$ reference cosmology, rather than the reported model
+  ($\Omega_\textrm{m}=0.3,\Omega_{\Lambda}=0.7$), which is excluded even at 3-$\sigma$ confidence level.}\\
+  &   \textbf{Scientific Product: \hyperlink{13.wang.raa}{Wang et al. (2013)}}  \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
-  \textsc{Jan. 2011}--     &   \emph{Title: Using the Test of the Distance-Duality Relation to Probe the Morphology of Galaxy Clusters} \\
-  \textsc{Oct. 2011}       &   \small{Aiming at probing the intrinsic morphology of galaxy clusters, we make a cosmological model-independent test of the cosmic distance-duality relation, $D_{\rm L}(1+z)^{-2}/D_{\rm A}=1$, by two new methods. The luminosity distances ($D_{\rm L}$) are obtained from the Union2 SNIa compilation. The angular diameter distances ($D_{\rm A}$) are provided by two cluster morphological models, which are elliptical $\beta$-model and spherical $\beta$-model. Our results support that the marked triaxial ellipsoidal model is a better geometrical hypothesis describing the structure of galaxy clusters compared with the spherical $\beta$-model.}    \\
-                           &   \textbf{Scientific Product: \hyperlink{12.meng.apj}{Meng et al. (2012) (Item 3 of Publications)}} \\
+  \textsc{Jan. 2011}--   &   \emph{Title: Using the Test of the Distance-Duality Relation to Probe the Morphology of Galaxy Clusters} \\
+  \textsc{Oct. 2011}     &   \small{Aiming at probing the intrinsic morphology of galaxy clusters, we make a cosmological
+  model-independent test of the cosmic distance-duality relation, $D_{\rm L}(1+z)^{-2}/D_{\rm A}=1$, by two new methods. The
+  luminosity distances ($D_{\rm L}$) are obtained from the Union2 SNIa compilation. The angular diameter distances ($D_{\rm A}$) are
+  provided by two cluster morphological models, which are elliptical $\beta$-model and spherical $\beta$-model. Our results support
+  that the marked triaxial ellipsoidal model is a better geometrical hypothesis describing the structure of galaxy clusters compared
+  with the spherical $\beta$-model.}    \\
+  &   \textbf{Scientific Product: \hyperlink{12.meng.apj}{Meng et al. (2012)}} \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
-  \textsc{Sept. 2008}--     &   \emph{Title: Investigation on the Emission from the Receding Jet of Gamma-Ray Bursts}   \\
-  \textsc{Sept. 2009}       &   \small{In a series of work, we have studied the dynamical evolution of double-sided jets launched by the central engine of GRBs and calculated the afterglow emission from both jet components. For the first time, we present a detailed numerical study on the afterglow contributed from the jet component receding from the observer, with the effects of synchrotron self-absorption and equal arrival time surface taken into account. It is found that the receding jet emission is generally very weak and only manifests as a plateau in the late time radio afterglow light curves. However the emission from the receding jet can be significantly enhanced and possibly detectable, if the circum-burst medium density is very high.} \\
-                           &   \textbf{Scientific Product: \hyperlink{09.wang.aa}{Wang et al. (2009, 2010) (Items 1 \& 2 of Publications)}} \\
+  \textsc{Sept. 2008}--  &   \emph{Title: Investigation on the Emission from the Receding Jet of Gamma-Ray Bursts}   \\
+  \textsc{Sept. 2009}    &   \small{In a series of work, we have studied the dynamical evolution of double-sided jets launched by the central engine of GRBs and calculated the afterglow emission from both jet components. For the first time, we present a detailed numerical study on the afterglow contributed from the jet component receding from the observer, with the effects of synchrotron self-absorption and equal arrival time surface taken into account. It is found that the receding jet emission is generally very weak and only manifests as a plateau in the late time radio afterglow light curves. However the emission from the receding jet can be significantly enhanced and possibly detectable, if the circum-burst medium density is very high.} \\
+  &   \textbf{Scientific Product: \hyperlink{09.wang.aa}{Wang et al. (2009)}} \\
   %========================================================
 \end{longtable}
 
@@ -153,16 +164,26 @@
 \multicolumn{1}{c}{\textsc{Academic Journals and Conference Contribution}}      \\
 \vspace{-0.3cm}
 \begin{list}{\labelitemi}{\leftmargin=0.5em}
-    \item[1]\hypertarget{09.wang.aa}{} \textbf{Wang, X.}, Huang, Y. F., \& Kong, S.W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119})
-    \item[2]\hypertarget{10.wang.scichina}{} \textbf{Wang, X.}, Huang, Y. F., \& Kong, S.W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010a, \textit{Sci. China-Phys. Mech. Astron.}, 53 (Suppl.1), 259
-    \item[3]\hypertarget{12.meng.apj}{} Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98, (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833})
-    \item[4]\hypertarget{12.wang.jcap}{} \textbf{Wang, X.}, Meng, X.-L., Zhang, T.-J., Shan, H.Y., Gong, Y., Tao, C., Chen, X., \& Huang, Y. F. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136})
-    \item[5]\hypertarget{13.wang.raa}{} \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas
-  Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae, 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077})
+    \item[1]\hypertarget{09.wang.aa}{} \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119})
+    \item[2]\hypertarget{12.meng.apj}{} Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833})
+    \item[3]\hypertarget{12.wang.jcap}{} \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136})
+    \item[4]\hypertarget{13.wang.raa}{} \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas
+  Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077})
+    \item[5]\hypertarget{14.schmidt.apjl}{} Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through
+      the Looking GLASS: HST Spectroscopy of Faint Galaxies Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014,
+      \textit{Astrophys. J. Letters}, 782L, 36, (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532})
+    \item[6]\hypertarget{15.jones.aj}{} Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS).
+      II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107
+      (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967})
+    \item[7]\hypertarget{15.wang.apj}{} \textbf{Wang, X.}, Hoag, A., Huang, K., Treu, T., Bradac, M., Schmidt, K. B. et al. The
+      Grism Lens-Amplified Survey from Space (GLASS). IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier
+      field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, submitted
+      (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) 
 \end{list}  \\
 %\multicolumn{1}{c}{\textsc{Conference Contributions, Unrefereed}}    \\
 %\vspace{-0.4cm}
 %\begin{list}{\labelitemi}{\leftmargin=0.5em}
+%    \item[2]\hypertarget{10.wang.scichina}{} \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010a, \textit{Sci. China-Phys. Mech. Astron.}, 53 (Suppl.1), 259
 %    \item[5]\hypertarget{5}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
 %\end{list}   \\
 \end{longtable}
