Sept 15 after fully moved to UCLA and GLASS paperIV published

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -3,7 +3,7 @@
 % itself based on Alessandro Plasmati's cv template:
 % http://www.scribd.com/doc/16335667/Writing-your-Professional-CV-with-LaTeX
 %--------------------------------------------------------------------------------------------------------------------------------
-%: vim: linebreak smartindent formatoptions+=twa
+%: vim: formatoptions+=tw inde=
 \documentclass[10pt]{article}
 
 \usepackage{geometry}
@@ -63,9 +63,9 @@
 \section{Personal Information}
 \begin{tabular}{rl}
     \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
-    \textsc{Mailing Address:} & 734 Elkus Walk Apt. 205, Goleta CA 93117, the United States of America \\
+    \textsc{Mailing Address:} & 3251 S. Sepulveda Blvd., Apt. 307, Los Angeles, CA 90034, the United States of America \\
     \textsc{E-mail, Cell and Skype Account:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +1-805-574-0025  |  albertfxwang \\
-    \textsc{Current Status:}  & Graduate Student at University of California, Santa Barbara   \\
+    \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -77,10 +77,15 @@
 \section{Education}
 \begin{tabular}{r|p{17.5cm}}
   %--------------------------------------------------------
-  \textsc{Sept. 2013}--      &   Physics Department, UCSB    |   \textbf{Towards Ph.D. in physics (Jun. 2018)}   \\
+  \textsc{Sept. 2015}--      &   Department of Physics and Astronomy, UCLA    |   \textbf{Towards Ph.D. in Astrophysics (Jun. 2018)}   \\
   \textsc{Present}
-  & Field of Interest: Strong Gravitational Lensing, Galaxy Clusters, Cosmology.     \\
+  & Field of Interest: Nebular Emission Spectroscopy, Strong Gravitational Lensing, Galaxy Clusters, Cosmology.     \\
   &   \texttt{Advisor: Prof. Tommaso Treu}     \\
+  \multicolumn{2}{c}{} \\
+  %--------------------------------------------------------
+  \textsc{Sept. 2013}--      &   Physics Department, UCSB    |   \textbf{M.A. in Physics with Astrophysics Emphasis (Jun. 2015)}   \\
+  \textsc{Sept. 2015}
+  &   \texttt{Advisor: Prof. Tommaso Treu}; \quad Cumulative Total (Grad) GPA: 3.96     \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics (Jun. 2013)}   \\
@@ -175,10 +180,9 @@
     \item[6]\hypertarget{15.jones.aj}{} Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS).
       II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107
       (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967})
-    \item[7]\hypertarget{15.wang.apj}{} \textbf{Wang, X.}, Hoag, A., Huang, K., Treu, T., Bradac, M., Schmidt, K. B. et al. The
+    \item[7]\hypertarget{15.wang.apj}{} \textbf{Wang, X.}, Hoag, A., Huang, K.-H., Treu, T., Bradac, M., Schmidt, K. B. et al. The
       Grism Lens-Amplified Survey from Space (GLASS). IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier
-      field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, submitted
-      (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) 
+      field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) 
 \end{list}  \\
 %\multicolumn{1}{c}{\textsc{Conference Contributions, Unrefereed}}    \\
 %\vspace{-0.4cm}
@@ -188,23 +192,31 @@
 %\end{list}   \\
 \end{longtable}
 
-\vspace{-2.5em}
+\vspace{-2em}
 
 \begin{longtable}{r|p{16.5cm}}
-\multicolumn{2}{c}{\textsc{Academic Activities}}  \\
-\textsc{Apr. 2009}   &   \textbf{Presented a talk}, @ \href{http://www.ns-grb.com/index0.html}{Frontiers of Space Astrophysics: Neutron Stars \& Gamma Ray Bursts --- Recent Developments \& Future Directions}, Cairo \& Alexandria, Egypt     \\
-%            &   \emph{Title: Studies on the Emission From the Receding Jet of GRBs}  \\
-\multicolumn{2}{c}{} \\
+
+    \multicolumn{2}{c}{\textsc{Academic Activities}}  \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Apr. 2009}   &   \textbf{Presented a talk}, @ \href{http://www.ns-grb.com/index0.html}{Frontiers of Space Astrophysics: Neutron Stars \& Gamma Ray Bursts --- Recent Developments \& Future Directions}, Cairo \& Alexandria, Egypt     \\
+    \multicolumn{2}{c}{} \\
 %\textsc{Apr. 2010}   &   \textbf{Presented a poster}, @ \href{http://www-tap.scphys.kyoto-u.ac.jp/GRB2010/}{Deciphering the Ancient Universe with Gamma-Ray Bursts}, Kyoto, Japan    \\
 %            &   \emph{Title: On the Counter-Jet Emission in GRB Afterglows}     \\
 %\multicolumn{2}{c}{} \\
-\textsc{Jun. 2010}   &   \textbf{Presented a talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, University of Hong Kong, Hong Kong   \\
-%            &   \emph{Title: A Numerical Study of the Afterglow Emission from GRB Double-Sided Jets}    \\
-\multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2010}   &   \textbf{Presented a talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, University of Hong Kong, Hong Kong   \\
+    \multicolumn{2}{c}{} \\
 %\textsc{Jul. 2011}   &   Member of LOC, @ \href{http://lss.bao.ac.cn/meeting/lens11/}{Summer School \& Workshop: Weak and Strong Gravitational Lensing}, NAOC, Beijing  \\
 %\multicolumn{2}{c}{} \\
-\textsc{Nov. 2012}   &   \textbf{Presented a talk}, @ \href{http://www.thca.tsinghua.edu.cn/en/index.php/Workshop_programme}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
+
+    \textsc{Nov. 2012}   &   \textbf{Presented a talk}, @ \href{http://www.thca.tsinghua.edu.cn/en/index.php/Workshop_programme}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
 %            &   \emph{Title: Observational constraints on cosmic neutrinos and dark energy revisited}    \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Aug. 2015}   &   \textbf{Presented a talk}, @ \href{http://astronomy2015.org/node/80}{Focus Meeting 22 at XXIX IAU
+General Assembly}, Honolulu, HI     \\
+
 \end{longtable}
 
 \vspace{-1ex}
@@ -219,8 +231,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Awards and Honors (selected)}
 \begin{tabular}{rl}
+~~~~~~\textsc{Apr. 2015} & AAS International Travel Grant (\$1k)    \\
 ~~~~~~\textsc{Jun. 2014} & 1$^{\rm st}$ Prize for Excellent M.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province   \\
-~~~~~~\textsc{Dec. 2012} & National Scholarship for Graduates \\
+~~~~~~\textsc{Dec. 2012} & National Scholarship for Graduates   \\
 & {\it\small ~~~This is the highest honorific scholarship within China conferred annually upon excellent graduate students.}\\
 %~~~~~~\textsc{Jan. 2012} & Excellent Graduate Leader in School of Astronomy and Space Sciences, Nanjing University  \\
 %~~~~~~\textsc{Nov. 2010} & Scholarship for Excellent Graduate Students in Nanjing University \\
