160125 for NESSF application

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -18,7 +18,7 @@
 %\setlength{\textheight}{10.5in}
 %\setlength{\textheight}{13.5in}
 
-\usepackage[latin1]{inputenc}
+%\usepackage[latin1]{inputenc}
 \usepackage{marvosym}
 \usepackage{fontspec} 					    %for loading fonts
 \usepackage{xunicode,xltxtra,url,parskip} 	%other packages for formatting
@@ -115,14 +115,14 @@
   \hyperlink{15.jones.aj}{Jones et al. (2015)}, \hyperlink{15.wang.apj}{Wang et al. (2015)} } \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
-  \textsc{Sept. 2012}--  &   \emph{Title: Applications of the Non-Parametric Bayesian Method to Cosmological Reconstructions}	\\
-  \textsc{Aug. 2013}     &   \small{We attempt to use the newly proposed non-parametric Bayesian method to reconstruct the
-  evolution history of some crucial cosmological quantities, i.e., primordial perturbation power spectrum, dark energy equation of
-  state, growth function. We believe that some unique abrupt features of the primordial power spectrum can be revealed by our
-  method. With the help of Fisher formalism and principle component analysis, it is straightforward to forecast the possibility
-  that those features can be detected by next generation projects, i.e., AS3, BigBOSS, Euclid, CMBPol.}	\\
-  &   \textbf{Scientific Product: paper to be submitted} \\
-  \multicolumn{2}{c}{} \\
+%  \textsc{Sept. 2012}--  &   \emph{Title: Applications of the Non-Parametric Bayesian Method to Cosmological Reconstructions}	\\
+%  \textsc{Aug. 2013}     &   \small{We attempt to use the newly proposed non-parametric Bayesian method to reconstruct the
+%  evolution history of some crucial cosmological quantities, i.e., primordial perturbation power spectrum, dark energy equation of
+%  state, growth function. We believe that some unique abrupt features of the primordial power spectrum can be revealed by our
+%  method. With the help of Fisher formalism and principle component analysis, it is straightforward to forecast the possibility
+%  that those features can be detected by next generation projects, i.e., AS3, BigBOSS, Euclid, CMBPol.}	\\
+%  &   \textbf{Scientific Product: paper to be submitted} \\
+%  \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Feb. 2012}--   &   \emph{Title: Constraints on Cosmic Neutrinos and Dark Energy Revisited}  \\
   \textsc{Oct. 2012}     &   \small{Using various cosmological observations, i.e., CMB, weak lensing (WL), BAO, observational Hubble
@@ -221,12 +221,12 @@ General Assembly}, Honolulu, HI     \\
 
 \vspace{-1ex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{English Proficiency}
-\begin{tabular}{rl}
-~~~~~GRE General:        & 550 (69\%, Verbal) + 800 (94\%, Quantitative) + 4.0 (49\%, Analytical Writing)    \\
-~~~~~GRE Physics:        & 940 (91\%)    \\
-~~~~~TOEFL:      &   29 (Reading) + 30 (Listening) + 23 (Speaking) + 28 (Writing) = 110
-\end{tabular}
+%\section{English Proficiency}
+%\begin{tabular}{rl}
+%~~~~~GRE General:        & 550 (69\%, Verbal) + 800 (94\%, Quantitative) + 4.0 (49\%, Analytical Writing)    \\
+%~~~~~GRE Physics:        & 940 (91\%)    \\
+%~~~~~TOEFL:      &   29 (Reading) + 30 (Listening) + 23 (Speaking) + 28 (Writing) = 110
+%\end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Awards and Honors (selected)}
